# discord-amethyst

./: .env.example  .flake8  README.md  pyproject.toml
.github/workflows/: release.yml
src/amethyst/: __init__.py  abc.py  amethyst.py  client.py  error.py  errors.py  plugin.py  util.py  utils.py  widgets.py
src/amethyst/moduleutils/: __init__.py  errors.py  utils.py
src/amethyst/widget/: __init__.py  abc.py  command.py  commands.py  menu.py  plugin.py  schedule.py
src/amethyst/widget/event/: __init__.py  event.py  handler.py  library.py  widget.py
