[tool.poetry]
name = "discord-amethyst"
version = "0.1.0"
description = ""
authors = ["NimajnebEC <nimajnebec@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "amethyst", from = "src" }]
license = "MIT Licence"

[tool.poetry.dependencies]
discord-py = "^2.3.0"
dynamicpy = {git = "https://github.com/NimajnebEC/dynamicpy.git"}
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8-length = "^0.3.1"
flake8 = "^6.0.0"
pytest = "^7.3.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
